kube/kube-test/auth-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-service
  labels:
    app: auth
    type: authentication
spec:
  type: ClusterIP
  #clusterIP: 10.92.0.149
  selector:
    app: auth
    type: authentication
  ports:
  - port: 80
    targetPort: 8082
