kube/kube-test/qr-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qr-cluster-service-test
  labels:
    app: qrjava
    type: qrcode-generator
spec:
  type: ClusterIP
  #clusterIP: 10.92.8.1
  selector:
    app: qrjava
    type: qrcode-generator
  ports:
  - port: 80
    targetPort: 8080
