kube/kube-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: qreach-dev-ingress
 namespace: default
 annotations:
    enable-underscores-in-headers: "true"
    kubernetes.io/ingress.class: "nginx"
    #kubernetes.io/ingress.global-static-ip-name: "ingress-webapps"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Id-Token $http_id_token;
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    #nginx.ingress.kubernetes.io/rewrite-target: "http://qreach.adamradvan.eu/login"
    #nginx.ingress.kubernetes.io/permanent-redirect: http://qreach.adamradvan.eu/login
    #nginx.ingress.kubernetes.io/auth-url: http://qreach.adamradvan.eu/login
    nginx.ingress.kubernetes.io/auth-response-headers: Id-Token
spec:
  #ingressClassName: nginx
  #tls:
  #- hosts:
  #  - qreach.adamradvan.eu
  #  secretName: qreach-server-tls
  #defaultBackend:
    #service:
      #name: auth-cluster-service
      #port:
        #number: 8082
  rules:
  #
  - host: tenant1.qreach.adamradvan.eu
    http:
      paths:
      - pathType: Prefix 
        path: "/"
        backend:
          service:
            name: front-cluster-service
            port:
              number: 80
       #service qr-cluster-service
      - pathType: Prefix 
        path: "/secure/qr-code"
        backend:
          service:
            name: qr-cluster-service-test
            port:
              number: 8080
              
      #service auth-cluster-service
      - pathType: Prefix 
        path: "/login"
        backend:
          service:
            name: auth-cluster-service
            port:
              number: 8082
      - pathType: Prefix 
        path: "/verify"
        backend:
          service:
            name: auth-cluster-service
            port:
              number: 8082
      - pathType: Prefix
        path: "/sign-up"
        backend:
          service:
            name: auth-cluster-service
            port:
              number: 8082
      - pathType: Prefix
        path: "/create-tenant"
        backend:
          service:
            name: auth-cluster-service
            port:
              number: 8082
      - pathType: Prefix
        path: "/list-tenants"
        backend:
          service:
            name: auth-cluster-service
            port:
              number: 8082
      - pathType: Prefix
        path: "/delete-tenant"
        backend:
          service:
            name: auth-cluster-service
            port:
              number: 8082
      #service his-cluster-service 
      - pathType: Prefix 
        path: "/secure/history"
        backend:
          service:
            name: his-cluster-service
            port:
              number: 8888
      - pathType: Prefix 
        path: "/secure/test"
        backend:
          service:
            name: his-cluster-service
            port:
              number: 80
      #service front-end

      #service tenants
      - pathType: Prefix 
        path: "/secure/tenants"
        backend:
          service:
            name: ten-cluster-service
            port:
              number: 8080
      - pathType: Prefix 
        path: "/tenants"
        backend:
          service:
            name: ten-cluster-service
            port:
              number: 8080

   


status:
  loadBalancer:
    ingress:
    - ip: 34.141.92.169
